--- a/package.json
+++ b/package.json
@@ -13,14 +13,19 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.3.6",
     "formik": "^2.2.9",
+    "i18next": "^22.4.15",
+    "i18next-browser-languagedetector": "^7.0.1",
+    "i18next-http-backend": "^2.2.0",
     "nanoid": "^4.0.1",
     "notiflix": "^3.2.6",
     "prop-types": "^15.8.1",
     "react": "^18.1.0",
     "react-content-loader": "^6.2.1",
     "react-dom": "^18.1.0",
+    "react-i18next": "^12.2.2",
     "react-icons": "^4.8.0",
     "react-redux": "^8.0.5",
+    "react-router-dom": "^6.11.0",
     "react-scripts": "5.0.1",
     "react-spinners": "^0.13.8",
     "redux": "^4.2.1",
